# Cpp.Project.Manage.Recipes

./: README.md
cmake/: README.md
cmake/add_executable/: README.md
cmake/add_executable/hello_world/: README.md
cmake/add_executable/hello_world/recipe-01/: CMakeLists.txt
cmake/add_executable/hello_world/recipe-02/: CMakeLists.txt
cmake/add_executable/hello_world/recipe-03/: CMakeLists.txt
cmake/add_executable/hello_world/recipe-04/: CMakeLists.txt  build_by_cmake.sh
cmake/add_executable/multiple_targets/: README.md
cmake/add_executable/multiple_targets/recipe-01/: CMakeLists.txt
cmake/add_executable/multiple_targets/recipe-02/: CMakeLists.txt
cmake/add_executable/multiple_targets/recipe-03/: CMakeLists.txt
cmake/add_executable/multiple_targets/recipe-04/: CMakeLists.txt
cmake/add_executable/recipe-01/: CMakeLists.txt
cmake/add_executable/recipe-02/: CMakeLists.txt
cmake/add_executable/recipe-03/: CMakeLists.txt  build_by_cmake.sh
cmake/add_executable/recipe-05/: CMakeLists.txt
cmake/add_executable/recipe-06/: CMakeLists.txt  build_by_cmake.sh
cmake/add_executable/recipe-07/: build_by_cmake.sh
cmake/add_executable/recipe-08/: CMakeLists.txt
cmake/add_executable/single_target/: README.md
cmake/add_executable/single_target/recipe-01/: CMakeLists.txt
cmake/add_executable/single_target/recipe-02/: CMakeLists.txt  build_by_cmake.sh
cmake/add_executable/single_target/recipe-03/: CMakeLists.txt
cmake/add_executable/single_target/recipe-04/framework/: CMakeLists.txt
cmake/add_executable/single_target/recipe-04/idcard/: CMakeLists.txt
cmake/add_library/: README.md
cmake/add_library/shared_library/: README.md
cmake/add_library/shared_library/recipe-01/: CMakeLists.txt
cmake/add_library/shared_library/recipe-02/lib/: CMakeLists.txt
cmake/add_library/shared_library/recipe-03/lib/: CMakeLists.txt
cmake/add_library/shared_library/recipe-04/framework/: CMakeLists.txt
cmake/add_library/shared_library/recipe-04/idcard/: CMakeLists.txt
cmake/add_library/static_library/: README.md
cmake/add_library/static_library/recipe-01/: CMakeLists.txt
cmake/add_library/static_library/recipe-02/: CMakeLists.txt
cmake/add_library/static_library/recipe-02/lib/: CMakeLists.txt
cmake/add_library/static_library/recipe-03/: CMakeLists.txt
cmake/add_library/static_library/recipe-03/lib/: CMakeLists.txt
cmake/add_library/static_library/recipe-04/: CMakeLists.txt
cmake/add_library/static_library/recipe-04/framework/: CMakeLists.txt
cmake/add_library/static_library/recipe-04/idcard/: CMakeLists.txt
cmake/build_time_operations/: README.md
cmake/build_time_operations/add_custom_command/: README.md
cmake/build_time_operations/add_custom_command/recipe-01/lib/: CMakeLists.txt
cmake/build_time_operations/add_custom_command/recipe-02/: CMakeLists.txt  build_by_cmake.sh
cmake/installing_and_packaging/: README.md
cmake/installing_and_packaging/installing_your_project/: README.md
cmake/installing_and_packaging/installing_your_project/recipe-01/: CMakeLists.txt  build_by_cmake.sh
cmake/installing_and_packaging/installing_your_project/recipe-02/: CMakeLists.txt
cmake/installing_and_packaging/installing_your_project/recipe-02/lib/: CMakeLists.txt
cmake/installing_and_packaging/installing_your_project/recipe-03/: CMakeLists.txt  build_by_cmake.sh
cmake/installing_and_packaging/installing_your_project/recipe-03/framework/: CMakeLists.txt
cmake/installing_and_packaging/installing_your_project/recipe-03/idcard/: CMakeLists.txt
cmake/writing_an_installer/installing_your_project/: README.md
cmake/writing_an_installer/installing_your_project/recipe-01/: CMakeLists.txt  build_by_cmake.sh
cmake/writing_an_installer/installing_your_project/recipe-01/src/: CMakeLists.txt
cmake/writing_an_installer/installing_your_project/recipe-02/: CMakeLists.txt
cmake/writing_an_installer/installing_your_project/recipe-02/lib/: CMakeLists.txt
make/: README.md
make/add_executable/: README.md
make/add_executable/hello_world/: README.md
make/add_executable/hello_world/recipe-01/: Makefile
make/add_executable/hello_world/recipe-02/: Makefile
make/add_executable/multiple_targets/: README.md
make/add_executable/multiple_targets/recipe-01/: Makefile
make/add_executable/multiple_targets/recipe-02/: Makefile
make/add_executable/multiple_targets/recipe-03/: Makefile
make/add_executable/multiple_targets/recipe-04/: Makefile
make/add_executable/multiple_targets/recipe-05/: Makefile
make/add_executable/multiple_targets/recipe-06/: Makefile
make/add_executable/multiple_targets/recipe-07/: Makefile
make/add_executable/recipe-01/: Makefile
make/add_executable/recipe-02/: Makefile
make/add_executable/recipe-04/: Makefile
make/add_executable/recipe-05/: Makefile
make/add_executable/recipe-06/: Makefile
make/add_executable/recipe-07/: Makefile
make/add_executable/recipe-09/: Makefile
make/add_executable/single_target/: README.md
make/add_executable/single_target/recipe-01/: Makefile
make/add_executable/single_target/recipe-02/: Makefile
make/add_executable/single_target/recipe-03/: Makefile
make/add_executable/single_target/recipe-04/: Makefile
make/add_library/shared_library/recipe-01/: Makefile
make/add_library/shared_library/recipe-02/: Makefile
make/add_library/shared_library/recipe-03/: Makefile
make/add_library/shared_library/recipe-03/lib/: Makefile
make/add_library/shared_library/recipe-04/: Makefile
make/add_library/shared_library/recipe-04/framework/: Makefile
make/add_library/shared_library/recipe-04/idcard/: Makefile
make/add_library/static_library/: README.md
make/add_library/static_library/recipe-01/: Makefile
make/add_library/static_library/recipe-02/: Makefile
make/add_library/static_library/recipe-03/: Makefile
make/add_library/static_library/recipe-03/lib/: Makefile
make/add_library/static_library/recipe-04/: Makefile
make/add_library/static_library/recipe-04/framework/: Makefile
make/build_time_operations/add_custom_command/: README.md
(+1 files in other folders)
